# ourmenu

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  routes.rs
static/: not_found.html  server_error.html
templates/: index.html.hbs
templates/layouts/: application.html.hbs
templates/sessions/: new.html.hbs
templates/users/: edit.html.hbs
