[package]
name = "ourmenu"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "http2"] }
env_logger = "0.11.8"
handlebars = { version = "6.3.2", features = ["dir_source"] }
log = "0.4.27"
mime = "0.3.17"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
